updated links of buttons and background color

--- a/Codes/HTML CODES/index.html
+++ b/Codes/HTML CODES/index.html
@@ -31,10 +31,10 @@
       Welcome to PathPlanPro , a website which guides users to acheive their
       goal by providing them with roadmaps.
     </div>
-    <a href="/Codes/HTML CODES/rolebased.html">
+    <a href="/Codes/HTML CODES/roles.html">
       <button class="styled-button-roles">ROLES</button>
     </a>
-    <a href="/Codes/HTML CODES/skillbased.html">
+    <a href="/Codes/HTML CODES/skills.html">
       <button class="styled-button-skills">SKILLS</button>
     </a>
     <script
