--- a/Codes/HTML CODES/roles.html
+++ b/Codes/HTML CODES/roles.html
@@ -33,97 +33,97 @@
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Android Developer</h5>
+          <p class="card-text">Designs and builds mobile applications for devices running the Android operating system..</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">ASP.NET Core Developer</h5>
+          <p class="card-text">Creates web applications using the ASP.NET Core framework, focusing on modern, scalable, and high-performance solutions.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Backend Developer</h5>
+          <p class="card-text">Designs, implements, and maintains the server-side logic, databases, and APIs that power web and mobile applications.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Blockchain Developer</h5>
+          <p class="card-text">Designs and develops decentralized applications and smart contracts utilizing blockchain technology for secure and transparent transactions and data management.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">DevOps</h5>
+          <p class="card-text">Facilitates seamless collaboration between development and operations teams, automating and streamlining the software development lifecycle.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Frontend Developer</h5>
+          <p class="card-text">Designs and creates the user interface and interactive features of websites or application</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Full Stack Developer</h5>
+          <p class="card-text">Handles both frontend and backend development, responsible for creating and maintaining all aspects of a software application or system</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">QA Analyst</h5>
+          <p class="card-text">Ensures software quality by testing and identifying defects, ensuring a reliable and smooth user experience.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">React Native Developer</h5>
+          <p class="card-text">Builds cross-platform mobile applications using the React Native framework.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Security Engineer</h5>
+            <p class="card-text">Designs and implements measures to protect systems, networks, and data from cyber threats and vulnerabilities.</p>
+            <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Software Architect</h5>
+          <p class="card-text">Designs and plans the overall structure and functionality of a software system.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">UX Designer</h5>
+          <p class="card-text">UX designer crafts intuitive and engaging user experiences for digital products.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
 
