partially updated skills page

--- a/Codes/HTML CODES/roles.html
+++ b/Codes/HTML CODES/roles.html
@@ -27,7 +27,9 @@
         </ul>
       </nav>
     </header>
-    <h1>ROLES PAGE</h1>
+    </body>
+    </br>
+    <div class="roles-h1">ROLES</div>
     </br>
     <div class="card-grid">
       <div class="card" style="width: 18rem;">
