--- a/Codes/HTML CODES/skills.html
+++ b/Codes/HTML CODES/skills.html
@@ -27,103 +27,104 @@
         </ul>
       </nav>
     </header>
-    <h1>SKILLS PAGE</h1>
+    </br>
+    <div class="skills-h1">SKILLS</div>
     </br>
     <div class="card-grid">
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Angular</h5>
+          <p class="card-text">Angular is a TypeScript-based open-source framework for building dynamic web applications.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Design Systems</h5>
+          <p class="card-text">Design Systems are standardized collections of design elements and guidelines for cohesive and efficient product development.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">JavaScript</h5>
+          <p class="card-text">JavaScript is a versatile, high-level programming language primarily used for web development.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Kubernetes</h5>
+          <p class="card-text">Kubernetes is an open-source container orchestration platform for automating the deployment, scaling, and management of containerized applications.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Mongo DB</h5>
+          <p class="card-text">MongoDB is a popular NoSQL database management system, using a document-oriented data model.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Node.js</h5>
+          <p class="card-text">Node.js is a runtime environment that executes JavaScript code on the server-side, enabling scalable and efficient network applications.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Prompt Engineering</h5>
+          <p class="card-text">Timely and efficient application of engineering principles, practices, and methodologies.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Python</h5>
+          <p class="card-text"> High-level, versatile programming language known for its readability and extensive libraries.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">React.js</h5>
+          <p class="card-text">Popular JavaScript library for building interactive user interfaces and single-page applications.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">SQL</h5>
+          <p class="card-text">Domain-specific language for managing and querying relational databases.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">TypeScript</h5>
+          <p class="card-text">Superset of JavaScript that enhances code quality and developer productivity.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>
       <div class="card" style="width: 18rem;">
         <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <h5 class="card-title">Vue.js</h5>
+          <p class="card-text">Vue.js is a progressive JavaScript framework used for building user interfaces and single-page applications.</p>
+          <a href="#" class="btn btn-primary">View Roadmap</a>
         </div>
       </div>  
     <script
