added illustration images for skills

--- a/Codes/HTML CODES/index.html
+++ b/Codes/HTML CODES/index.html
@@ -10,6 +10,7 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="/Codes/CSS CODES/styles.css" />
   </head>
   <body>
@@ -31,12 +32,18 @@
       Welcome to PathPlanPro , a website which guides users to acheive their
       goal by providing them with roadmaps.
     </div>
+    <img
+      class="Index-image"
+      src="/Codes/IMAGES/Index image.png"
+      alt="illustration of roadmap"
+    />
     <a href="/Codes/HTML CODES/roles.html">
       <button class="styled-button-roles">ROLES</button>
     </a>
     <a href="/Codes/HTML CODES/skills.html">
       <button class="styled-button-skills">SKILLS</button>
     </a>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
