--- a/Codes/HTML CODES/skills.html
+++ b/Codes/HTML CODES/skills.html
@@ -32,7 +32,7 @@
     </br>
     <div class="card-grid">
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/Angular.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Angular</h5>
           <p class="card-text">Angular is a TypeScript-based open-source framework for building dynamic web applications.</p>
@@ -40,7 +40,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/Design Systems.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Design Systems</h5>
           <p class="card-text">Design Systems are standardized collections of design elements and guidelines for cohesive and efficient product development.</p>
@@ -48,7 +48,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/Javascript.jpeg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">JavaScript</h5>
           <p class="card-text">JavaScript is a versatile, high-level programming language primarily used for web development.</p>
@@ -56,7 +56,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/kubernetes.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Kubernetes</h5>
           <p class="card-text">Kubernetes is an open-source container orchestration platform for automating the deployment, scaling, and management of containerized applications.</p>
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/MongoDB.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Mongo DB</h5>
           <p class="card-text">MongoDB is a popular NoSQL database management system, using a document-oriented data model.</p>
@@ -72,7 +72,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/nodejs.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Node.js</h5>
           <p class="card-text">Node.js is a runtime environment that executes JavaScript code on the server-side, enabling scalable and efficient network applications.</p>
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/thinking.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Prompt Engineering</h5>
           <p class="card-text">Timely and efficient application of engineering principles, practices, and methodologies.</p>
@@ -88,7 +88,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/python.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Python</h5>
           <p class="card-text"> High-level, versatile programming language known for its readability and extensive libraries.</p>
@@ -96,7 +96,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/react_js.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">React.js</h5>
           <p class="card-text">Popular JavaScript library for building interactive user interfaces and single-page applications.</p>
@@ -104,7 +104,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/SQL.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">SQL</h5>
           <p class="card-text">Domain-specific language for managing and querying relational databases.</p>
@@ -112,7 +112,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/Typescript.jpg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">TypeScript</h5>
           <p class="card-text">Superset of JavaScript that enhances code quality and developer productivity.</p>
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/SEDAN HYUDAI.jpeg" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/vue.png" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Vue.js</h5>
           <p class="card-text">Vue.js is a progressive JavaScript framework used for building user interfaces and single-page applications.</p>
