--- a/Codes/HTML CODES/skills.html
+++ b/Codes/HTML CODES/skills.html
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="card" style="width: 18rem;">
-        <img class="card-img-top" src="/Codes/IMAGES/thinking.png" alt="Card image cap">
+        <img class="card-img-top" src="/Codes/IMAGES/prpompt_engineering.jpeg" alt="Card image cap">
         <div class="card-body">
           <h5 class="card-title">Prompt Engineering</h5>
           <p class="card-text">Timely and efficient application of engineering principles, practices, and methodologies.</p>
